# Zero-Z-Core

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
asr/: audio_capture.py  base.py  recognizer.py  vad.py
asr/paraformer/: __init__.py  recognizer.py
asr/providers/: __init__.py
asr/providers/paraformer/: __init__.py  provider.py
core/: config.py  events.py  orchestrator.py  pipeline.py  turn_controller.py
data/: config.example.yaml  config.yaml
data/characters/: default.yaml
data/characters/roxy/: card.json
data/characters/sample/: card.json
data/characters/zero/: card.json
dialogue/: character_card.py  manager.py  memory.py  personality.py
gui/: app.py  audio_player.py  conversation_panel.py  live2d_widget.py  pet_window.py  state_bridge.py  subtitle.py  tray.py
llm/: base.py  client.py
llm/providers/: openai_compatible.py
tts/: base.py  engine.py  launcher.py
tts/providers/: __init__.py
tts/providers/gpt_sovits/: __init__.py  provider.py
tts/providers/minimax/: __init__.py  provider.py
