[project]
name = "zero-z-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "funasr>=1.3.1",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pyside6>=6.11.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.12",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
